# ai-glasses

./: .gitignore  AGENTS.md  README.md  config.example.toml  pyproject.toml
firmware/: platformio.ini
firmware/src/: camera_pins.h  main.cpp  protocol.h
src/aiglasses/: benchmark.py  server.py
src/aiglasses/asr/: __init__.py  dashscope_asr.py
src/aiglasses/config/: __init__.py  firmware_header.py  settings.py
src/aiglasses/device/: __init__.py  manager.py
src/aiglasses/navigation/: __init__.py  state_machine.py
src/aiglasses/protocol/: __init__.py  packet.py
src/aiglasses/speech/: __init__.py  events.py  tts.py
src/aiglasses/vision/: __init__.py  export_yoloe_obstacle.py  ncnn_yolo.py  obstacle_classes.py  pipeline.py  torch_yolo.py  tuning.py  types.py  yolo_postprocess.py
src/aiglasses/web/: app.py
src/aiglasses/web/static/: app.js  styles.css
src/aiglasses/web/templates/: index.html
tests/: test_asr.py  test_benchmark.py  test_config.py  test_device_config.py  test_navigation.py  test_packet.py  test_speech_tts.py  test_torch_yolo.py  test_vision_pipeline.py  test_web_app.py  test_yolo_postprocess.py
