[project]
name = "ai-glasses"
version = "0.1.0"
description = "NCNN-powered assistive navigation backend and ESP32 firmware for smart glasses."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.111,<1",
    "uvicorn[standard]>=0.30,<1",
    "websockets>=12,<16",
    "numpy>=1.24,<2.3",
    "opencv-python>=4.8,<5",
    "pillow>=10,<13",
    "dashscope>=1.20,<2",
    "ncnn>=1.0.20260114",
]

[project.scripts]
aiglasses-server = "aiglasses.server:main"
aiglasses-model-benchmark = "aiglasses.benchmark:main"

[dependency-groups]
dev = [
    "pip>=26.1",
    "platformio>=6.1.19",
    "pytest>=8,<10",
    "ruff>=0.5,<1",
    "setuptools>=81.0.0",
    "wheel>=0.47.0",
]
export = [
    "pnnx>=20260409",
    "ultralytics>=8.3,<9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aiglasses"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
